# rust_rcli

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  cliff.toml  deny.toml
fixtures/: blake3.txt  ed25519.pk  ed25519.sk  index.html  key.txt
src/: lib.rs  main.rs
src/base/: mod.rs  options.rs  parser.rs
src/base64/: base64opt.rs  mod.rs  process.rs
src/com/: mod.rs  option.rs  parser.rs
src/csv/: csvopt.rs  csvopts.rs  mod.rs  options.rs  parser.rs  process.rs
src/csvoptions/: mod.rs  parser.rs  player.rs  process.rs
src/genpass/: genpassopt.rs  genpassopts.rs  mod.rs  process.rs
src/httpserve/: httpopt.rs  mod.rs  process.rs
src/text/: mod.rs  process.rs  textopt.rs  textsign.rs
src/utils/: mod.rs  rand.rs
