[package]
name = "rust_rcli"
version = "0.1.0"
edition = "2024"
authors = ["wenxiang wang <wenxiangyuan350@gmail.com>"]
license = "(MIT OR Apache-2.0) AND Unicode-3.0 "

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
csv = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34+deprecated"
zxcvbn = "3.1.0"
rand = "0.9.1"
