[package]
name = "rust_rcli"
version = "0.1.0"
edition = "2024"
authors = ["wenxiang wang <wenxiangyuan350@gmail.com>"]
license = "(MIT OR Apache-2.0) AND Unicode-3.0 OR BSD-2-Clause"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
csv = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34+deprecated"
zxcvbn = "3.1.0"
rand = { version = "0.8", features = ["std_rng"] }
rand_core = "0.6"
base64 = "0.22.1"
blake3 = "1.8.2"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread", "macros", "net", "fs"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
axum = { version = "0.8.4", features = ["http2", "query", "tracing"] }
log = "0.4.27"
